fixed button not centered

--- a/eight-ball/reset.css
+++ b/eight-ball/reset.css
@@ -55,14 +55,15 @@ button,
 textarea,
 select {
   font: inherit;
+  padding: 0;
 }
 
 /* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
 @media (prefers-reduced-motion: reduce) {
   html:focus-within {
-   scroll-behavior: auto;
+    scroll-behavior: auto;
   }
-  
+
   *,
   *::before,
   *::after {
